--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -1,8 +1,10 @@
 ---
 import BaseLayout from './BaseLayout.astro'
+
+const { title } = Astro.props
 ---
 
-<BaseLayout>
+<BaseLayout title={title}>
 	<main class="home">
 		<slot />
 	</main>
