--- a/src/styles/work.css
+++ b/src/styles/work.css
@@ -125,27 +125,31 @@ a.btn:active {
 a.next {
 	display: block;
 	width: 100%;
+	aspect-ratio: 16 / 5;
 	display: grid;
 	grid-template-columns: 100%;
 	grid-template-rows: 1fr;
 	grid-template-areas: "image";
 	margin-top: 5rem;
+	overflow: hidden;
 }
 
 a.next picture {
 	display: block;
 	width: 100%;
 	grid-area: image;
+	object-fit: cover;
 }
 
 a.next img {
 	display: block;
 	width: 100%;
+	height: 100%;
 }
 
 a.next span {
 	width: 100%;
-	height: 100%;
+	aspect-ratio: 16 / 5;
 	grid-area: image;
 	background: rgba(0, 0, 0, .5);
 	display: grid;
